--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
 </head>
 <body>
 <!-- hola -->
+<main>
+    <div class="contacto">
+        <img src="./imagen/pri1.jfif" alt="foto de perfil">
+        <h1>Datos personales</h1>
+        <ul>
+            <li>Priscila Correa</li>
+            <li>28 años</li>
+            <li>nahirpricorrea93@gmail.com</li>
+        </ul>
+        
+
+
+    </div>
+</main>
 <form>
  <div class="container">
      <div class="box">
       <h1>Ingresar</h1>
+      <br>
      <div class="User">    
     <input
     type="text"
@@ -39,6 +54,7 @@ type="password"
 name="password"
 id="password"
 placeholder="Confirmar Contraeña">
+<!--<textarea name="" id="mensaje" cols="20" rows="10" placeholder="Deja tu mensaje"></textarea>-->
 </div>
 <div class="login-btn">
     <button class="btn">Enviar</button>
